force-app/main/default/objects/WarClan__c/WarClan__c.object-meta.xml
<CustomObject>
    <label>War Clan</label>
    <nameField>
        <label>War Clan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>War Clans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>