force-app/main/default/objects/WarClan__c/fields/Attacks__c.field-meta.xml
<CustomField>
    <fullName>Attacks__c</fullName>
    <label>Attacks</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>