force-app/main/default/objects/WarClan__c/fields/Clan__c.field-meta.xml
<CustomField>
    <fullName>Clan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clan</label>
    <referenceTo>Clan__c</referenceTo>
    <relationshipLabel>War Clans</relationshipLabel>
    <relationshipName>WarClans</relationshipName>
    <type>Lookup</type>
</CustomField>