force-app/main/default/objects/WarClan__c/fields/ClanTag__c.field-meta.xml
<CustomField>
    <fullName>ClanTag__c</fullName>
    <externalId>true</externalId>
    <label>Clan Tag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>