force-app/main/default/objects/WarClan__c/fields/ClanWar__c.field-meta.xml
<CustomField>
    <fullName>ClanWar__c</fullName>
    <label>Clan War</label>
    <referenceTo>ClanWar__c</referenceTo>
    <relationshipLabel>War Clans</relationshipLabel>
    <relationshipName>WarClans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>