force-app/main/default/objects/WarClan__c/fields/ExpEarned__c.field-meta.xml
<CustomField>
    <fullName>ExpEarned__c</fullName>
    <label>Exp Earned</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>