force-app/main/default/objects/WarClan__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <externalId>true</externalId>
    <label>Tag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>